# C_RAG

./: .gitignore  Pipfile  README.md  app.py  benchmark.py  ingestion.py  langgraph.json  main.py  pyproject.toml  retriever.py
.chroma/: chroma.sqlite3
graph/: graph.py
graph/chains/: generation.py  retrieval_grader.py
graph/chains/tests/: test_chains.py
graph/nodes/: generate.py  grade_documents.py  retrieve.py  web_search.py
